--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <button onclick="deployApp('netlify')">🌐 Deploy to Netlify</button>
         <button onclick="deployApp('vercel')">⚡ Deploy to Vercel</button>
         <button onclick="deployApp('render')">☁️ Deploy to Render</button>
-        <button onclick="deployApp('heroku')">📦 Deploy to Heroku</button>
+        <!-- ✅ Heroku button fully removed -->
         <div id="deploy-log"></div>
       </div>
     </div>
